--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   web:
-    entrypoint: /bin/bash
+    entrypoint: /bin/sh
     build: .
     volumes:
       - type: bind
